--- a/_posts/2016-01-18-test-post.md
+++ b/_posts/2016-01-18-test-post.md
@@ -4,7 +4,7 @@ title: Test Post (here we go...)
 description: Please work
 categories: blogging
 ---
-######### Header!!!
+# Header!!!
 **Bold**, *italic*
 
 [Cat vs. Ferret, or Fuzz Wars](https://www.youtube.com/watch?v=OIRwQd6ihTQ)
